manifests/messaging/producer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
  namespace: messaging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: producer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
