manifests/messaging/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer
  namespace: messaging
spec:
  selector:
    app: consumer
  ports:
    - port: 5001
      targetPort: 5001
