manifests/messaging/producer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: messaging
spec:
  selector:
    app: producer
  ports:
    - port: 5000
      targetPort: 5000
